--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,7 @@
-
+{
+  "name":"sig-backend",
+  "version":"0.1.0",
+  "main":"src/index.js",
+  "scripts":{"start":"node src/index.js","dev":"nodemon src/index.js"},
+  "dependencies":{"express":"^4.18.2","pg":"^8.10.0","bcrypt":"^5.1.0","jsonwebtoken":"^9.0.0"}
+}
